...
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:background="?attr/dividerHorizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name" />
        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:text="@{viewModel.marvel.description}"
...
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name"
            tools:text="Hero description" />

        <Button
            android:id="@+id/sendButton"
            android:layout_width="322dp"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:text="@string/send"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
...
